// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-eiXkCI dpEIDn tab-link-fill"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-eiXkCI dpEIDn tab-link-fill"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-eiXkCI dpEIDn tab-link-fill"
>
  <span
    className="sc-iAITSW bSgebe"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-eiXkCI dpEIDn tab-link-fill"
>
  <div
    className="sc-djLMqZ iRkpvo"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-eiXkCI dpEIDn tab-link-fill"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-eiXkCI FPCFO tab-link-fill"
  size="small"
/>
`;
